fix alignment of navbar items

--- a/app/assets/stylesheets/securities.scss
+++ b/app/assets/stylesheets/securities.scss
@@ -21,7 +21,11 @@
 
 .dropdown {
   display: inline-block;
-  padding: 1em;
+}
+
+#dropdownMenu1 {
+  float: left;
+  margin: 1em;
 }
 
 .security-show-sub-info {
